# task-specific-pretraining-multimodal

./: .gitignore  README.md  pyproject.toml
MML_Suite/: __init__.py  additional_plots.py  avmnist_comparison.py  check_metrics.py  clean_json.py  cmam_loss.py  mmimdb_comparison.py  mosei_utt_fusion_no_missing_data_baseline_results.tex  mosi_comparison.py  multimodal_analysis.py  plot_comparison.py  plot_time_comparison.py  plot_total_training_time.py  resnet_comparison.py  result_comparison.py  run_mosi_pretrain.sh  run_n.sh  train_avmnist.py  train_cmam.py  train_monomodal.py  train_multimodal.py
MML_Suite/config/: __init__.py  base_config.py  cmam_config.py  data_config.py  experiment_config.py  logging_config.py  manager_configs.py  metric_config.py  model_config.py  monitor_config.py  multimodal_training_config.py  optimizer_config.py  resolvers.py  yaml_constructors.py
MML_Suite/data/: __init__.py  avmnist.py  base_dataset.py  iemocap.py  kinetics_sounds.py  mmimdb.py  mosi.py  msp_improv.py  pattern.py
MML_Suite/experiment_utils/: __init__.py  checkpoints.py  experiment_analyser.py  experiment_report.py  experiment_visualiser.py  global_state.py  logging.py  loss.py  managers.py  metric_recorder.py  printing.py  subprocess_runner.py  themes.py  utils.py
MML_Suite/federated/: federated_utils.py
MML_Suite/loss_functions/: gcnet_loss.py
MML_Suite/metrics/: __init__.py  corr.py  msa.py
MML_Suite/models/: __init__.py  avmnist.py  cmams.py  conv.py  kinetics_sounds.py  maxout.py  mixins.py  mmimdb.py  pooling.py  protocols.py
MML_Suite/results_processing/: __init__.py  plotting.py  (+2 more)
(+100169 files in other folders)
