[tool.poetry]
name = "mml-suite"
version = "0.1.0"
description = "MML_Suite is a modular tool for multimodal machine learning research. It supports configurable experiments, federated learning, and the novel C-MAMs approach for handling missing modalities."
authors = ["Jack Geraghty (jmg049) <jgeraghty049@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
torch = "^2.5.0"
modalities = {git = "https://github.com/jmg049/Modalities.git"}
pyyaml = "^6.0.2"
rich = "^13.9.3"
numpy = "^2.1.2"
pandas = "^2.2.3"
tabulate = "^0.9.0"
pillow = "^11.0.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
torchvision = "^0.20.0"
scikit-learn = "^1.5.2"
ruff = "^0.7.1"
h5py = "^3.12.1"
transformers = "^4.46.1"
mm-datasets = {git = "https://github.com/jmg049/DataSets.git"}
joblib = "^1.4.2"
pip = "^24.3.1"
ipykernel = "^6.29.5"
ipyfilechooser = "^0.6.0"
statsmodels = "^0.14.4"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
lint.select = ["E", "F", "I", "N"]  # Add rule categories for Errors, Flake8 style, Imports, Naming conventions.
lint.ignore = ["I001", "N806", "N803", "E501", "N812", "N802", "N999", "N801", "E741", "N811", "F811"]
# Additional settings
line-length = 120                # Max line length (often set to 88 or 120 in Python projects).
exclude = ["build", "dist", ".venv"]  # Ignore virtual environments or specific directories.
